--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN='7159288090:AAGl1-_N908l74XzNyUSkPg3_UXTAQzvMyI'
-PROVIDER_TOKEN='350862534:LIVE:YWU0YjcyNGRkYmFm'
+BOT_TOKEN='7440553241:AAEUZoT0CnmeuNrhlMU9YQ--qtEkot1_U7Q'
+PROVIDER_TOKEN=''
